--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "API-and-Express",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "cipher.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./index.js"
+    "start": "node app",
+    "dev": "nodemon app"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "demon": "^1.4.4",
     "nodemon": "^2.0.1"
   }
 }
