second drill finished

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "cipher.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app",
-    "dev": "nodemon app"
+    "start": "node cipher.js",
+    "dev": "nodemon cipher.js"
   },
   "repository": {
     "type": "git",
